# SOFTWARE_BUILD_SYSTEM_STUDY

./: README.md
04_build_tool_for_c-c++/: demo  hello.s  main.c
part1/04_build_tool_for_c-c++/: hello.c  hello.h  makefile
part2/06_make/0601_basic/: build_steps.mk  define_test.mk  fun_test.mk  macros_test.mk  makefile
part2/06_make/0602_scene/scene1_single_dir/src/: makefile
part2/06_make/0602_scene/scene2_mult_dir_a/src/: Makefile
part2/06_make/0602_scene/scene2_mult_dir_a/src/libmath/: clock.c  letter.c
part2/06_make/0602_scene/scene2_mult_dir_a/src/libprint/: banner.c  center.c
part2/06_make/0602_scene/scene2_mult_dir_b/src/: Makefile
part2/06_make/0602_scene/scene2_mult_dir_b/src/calc/: Makefile  calc.c  calculator
part2/06_make/0602_scene/scene2_mult_dir_b/src/libmath/: Makefile  clock.c  clock.d  letter.c  letter.d  numbers.c  numbers.d
part2/06_make/0602_scene/scene2_mult_dir_b/src/libprint/: Makefile  banner.c  banner.d  center.c  center.d  normal.c  normal.d  printers.h
part2/06_make/0602_scene/scene2_mult_dir_c/src/: Files.mk  Makefile
part2/06_make/0602_scene/scene2_mult_dir_c/src/libraries/: Files.mk
part2/06_make/0602_scene/scene2_mult_dir_c/src/libraries/math/: Files.mk
part2/06_make/0602_scene/scene2_mult_dir_c/src/make/: framework.mk
part2/06_make/0602_scene/scene3_new_compiler/src/: Makefile
part2/06_make/0602_scene/scene4_mult_var/: makefile  mult.c
part2/09_cmake/0901_basic-sync/: CMakeLists.txt
part2/09_cmake/0901_calculator/src/: CMakeLists.txt
part2/09_cmake/0901_cross_platform/: CMakeCache.txt
part2/09_cmake/0901_cross_platform/src/: CMakeLists.txt
part2/09_cmake/0901_custom_command/: CMakeLists.txt
part2/09_cmake/0901_custom_target/: CMakeLists.txt
part2/09_cmake/0901_debug/: CMakeLIsts.txt
part2/09_cmake/0901_executable/: CMakeLists.txt
part2/09_cmake/0901_find_perl/: CmakeLists.txt
part2/09_cmake/0901_foreach/: CMakeLists.txt
part2/09_cmake/0901_library/: CMakeLists.txt
part2/09_cmake/0901_macro/: CMakeLists.txt
part2/09_cmake/0901_try_compile/: CMakeLists.txt
part2/09_cmake/0902_mult_dir/: Makefile
part2/09_cmake/0902_mult_dir/src/: CMakeLists.txt
part2/09_cmake/0902_mult_dir/src/calc/: CMakeLists.txt
part2/09_cmake/0902_mult_dir/src/libmath/: CMakeLists.txt  number.c
part2/09_cmake/0902_mult_dir/src/libprint/: CMakeLists.txt  normal.c
part2/09_cmake/0902_mult_var/: CMakeLists.txt
part2/09_cmake/0902_new_compiler/src/: CMakeLists.txt  equations.math
part2/09_cmake/0902_single_dir/src/: CMakeLists.txt
part2/preface/scene1/src/: add.c  makefile  numbers.h
part2/prface/scene1/src/: calc.c  makefile  sub.c
part2/scene1/src/: calculator  makefile
